--- a/BTLJAVAWEB/.settings/org.eclipse.core.resources.prefs
+++ b/BTLJAVAWEB/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/Dashboard/index.jsp=UTF-8
+encoding//src/main/webapp/Utils/Header.jsp=UTF-8
+encoding//src/main/webapp/Utils/Sidebar.jsp=UTF-8
 encoding/<project>=UTF-8
