--- a/BTLJAVAWEB/.settings/org.eclipse.core.resources.prefs
+++ b/BTLJAVAWEB/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/Dashboard/Header.jsp=UTF-8
 encoding//src/main/webapp/Dashboard/Index.jsp=UTF-8
+encoding//src/main/webapp/Dashboard/Products.jsp=UTF-8
 encoding//src/main/webapp/Dashboard/Sidebar.jsp=UTF-8
 encoding//src/main/webapp/Homepage/Header.jsp=UTF-8
 encoding/<project>=UTF-8
